STM32_Code/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:51:04 **** Incremental Build of configuration Debug for project V2X_OBU ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_NUCLEO_64 -DUSE_HAL_DRIVER -DSTM32WB55xx -c -I../Core/Inc -I../Drivers/STM32WBxx_HAL_Driver/Inc -I../Drivers/STM32WBxx_HAL_Driver/Inc/Legacy -I../Drivers/BSP/P-NUCLEO-WB55.Nucleo -I../Drivers/CMSIS/Device/ST/STM32WBxx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:176:17: error: 'spi_timeout_counter' undeclared (first use in this function)
  176 |                 spi_timeout_counter = 0;
      |                 ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:176:17: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
17:51:41 **** Incremental Build of configuration Debug for project V2X_OBU ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_NUCLEO_64 -DUSE_HAL_DRIVER -DSTM32WB55xx -c -I../Core/Inc -I../Drivers/STM32WBxx_HAL_Driver/Inc -I../Drivers/STM32WBxx_HAL_Driver/Inc/Legacy -I../Drivers/BSP/P-NUCLEO-WB55.Nucleo -I../Drivers/CMSIS/Device/ST/STM32WBxx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-g++ -o "V2X_OBU.elf" @"objects.list"   -mcpu=cortex-m4 -T"/home/elhaloua/ESP_projects/V2X_project/STM32_Code/V2X_OBU/STM32WB55RGVX_FLASH.ld" --specs=nosys.specs -Wl,-Map="V2X_OBU.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -lstdc++ -lsupc++ -Wl,--end-group
Finished building target: V2X_OBU.elf
 
arm-none-eabi-size  V2X_OBU.elf 
arm-none-eabi-objdump -h -S V2X_OBU.elf  > "V2X_OBU.list"
   text	   data	    bss	    dec	    hex	filename
  23904	    120	   2184	  26208	   6660	V2X_OBU.elf
Finished building: default.size.stdout
 
Finished building: V2X_OBU.list
 
19:16:06 **** Incremental Build of configuration Debug for project V2X_OBU ****
make -j8 all 
arm-none-eabi-size  V2X_OBU.elf 
   text	   data	    bss	    dec	    hex	filename
  23904	    120	   2184	  26208	   6660	V2X_OBU.elf
Finished building: default.size.stdout
 
